Bug 1607140 - Add a more stringent check for mTouchBarHelper in loadIconForInput. r=spohl

Differential Revision: https://phabricator.services.mozilla.com/D58957